--- a/style.css
+++ b/style.css
@@ -5,9 +5,82 @@
 }
 
 body{
-    background-color: ;
+    background-color: #1BA0AD;
+    font-family: Barlow;
 }
 
+.card{
+    margin: 50px auto;
+    border-radius: 10px;
+    max-width: 400px;
+    height: 450px;
+    background-color: #ffffff;
+    box-shadow: 1px 2px 55px #696969;
+}
+
+.card--up{
+    background-image: url(images/bg-pattern-card.svg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: calc(350px / 2);
+    border-radius: 10px 10px 0 0;
+    position: relative;
+}
+
+.card--middle{
+    border-bottom: rgb(218, 218, 218) solid 1px;
+    height: calc(350px / 2);
+    text-align: center;
+}
+
+.card--down{
+    height: 100px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.c{
+    flex: 0 0 calc(100% /3);
+    text-align: center;
+    margin-top: 30px;
+}
+
+h2{
+    font-size: 20px;
+}
+
+.c p{
+    font-size: 12px;
+    color: gray;
+    margin-top: 5px;
+}
+#victor{
+    width: 120px;
+    border-radius: 50%;
+    border: #ffffff solid 4px;
+    position: absolute;
+    top: 115px;
+    left: 150px;
+}
+
+h1{
+    font-size: 20px;
+    margin-top: 20%;
+    margin-left: 5px;
+    display: inline-block
+}
+
+.age{
+    display: inline-block;
+    margin-left: 5px;
+    color: gray;
+    font-size: 20px;
+}
+
+.city{
+    color: gray;
+    margin-top: 10px;
+}
 .attribution { 
     font-size: 11px; text-align: center; 
 }
