--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 body{
     background-color: #1BA0AD;
-    font-family: Barlow;
+    font-family: Kumbh Sans;
 }
 
 .card{
@@ -46,7 +46,7 @@ body{
 }
 
 h2{
-    font-size: 20px;
+    font-size: 18px;
 }
 
 .c p{
@@ -64,7 +64,7 @@ h2{
 }
 
 h1{
-    font-size: 20px;
+    font-size: 18px;
     margin-top: 20%;
     margin-left: 5px;
     display: inline-block
@@ -74,7 +74,7 @@ h1{
     display: inline-block;
     margin-left: 5px;
     color: gray;
-    font-size: 20px;
+    font-size: 18px;
 }
 
 .city{
